# tree-sitter-clojure-simple

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: dis_marker.txt  list_lit.txt  meta_lit.txt  meta_marker.txt  old_meta_marker.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: dis_marker.txt  list_lit.txt  map_lit.txt  meta_marker.txt  ns_map_lit.txt  old_meta_marker.txt  read_cond_lit.txt  set_lit.txt  sym_lit.txt  tagged_or_ctor_lit.txt
