[package]
name = "tree-sitter-clojure-simple"
description = "clojure grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "clojure"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/sogaiu/tree-sitter-clojure-simple"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.3"

[build-dependencies]
cc = "1.0"
